<resources>
    <string name="app_name">PhotosManager</string>
    <string name="camera_label">Camera</string>
    <string name="albums_label">Albums</string>
    <string name="collage_label">Collage</string>
    <string name="network_label">See online</string>
    <string name="main_folder_name">VladyslavMoisieienkov/</string>
    <string name="add_folder_title">Add new folder</string>
    <string name="alert_folder_exists">Folder already exists!</string>
    <string name="alert_folder_created">Folder is created</string>
    <string name="alert_deleted_folder">Folder is deleted</string>
    <string name="alert_deleted_folder_not_exist">Folder doesnt exist!</string>
    <string name="add_folder_button_label">Add</string>
    <string name="folder_choose">Choose where save new photo</string>
    <string name="notes_label">Notes</string>
    <string name="notes_dialog_title">Title</string>
    <string name="notes_dialog_text">Text</string>
    <string name="notes_dialog_color">Colors</string>
    <string name="note_options_dialog_title">Actions</string>
    <string name="note_edit_save_button_text">Save note</string>
    <string name="miniature_options_alert_title">Choose action for miniature</string>
    <string name="collage_photo_take">Choose way of getting photo</string>
    <string name="collage_options_title">Collage options</string>
    <string name="return_preview_text_button">Ok</string>
</resources>
