<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/notes_dialog_title"
        android:id="@+id/title_textview"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:id="@+id/title_edit_text"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/notes_dialog_text"
        android:id="@+id/text_textview"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="match_parent"
        android:id="@+id/text_edit_text"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/notes_dialog_color"
        android:id="@+id/color_textview"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:layout_height="match_parent">
        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/noteRedColor"
            android:id="@+id/noteRedButton"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/noteBlueColor"
            android:id="@+id/noteBlueButton"/>
        <Button
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:background="@color/noteGreenColor"
            android:id="@+id/noteGreenButton"/>
    </LinearLayout>

</LinearLayout>